<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddDentist">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_header"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="6dp"
                android:src="@drawable/ic_search" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/search_for_dentist"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="16sp" />


            <ImageButton
                android:id="@+id/notification_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_notification"
                android:contentDescription="Notification Icon" />

            <ImageButton
                android:id="@+id/profile_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_avatar"
                android:contentDescription="Profile Icon" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/form_container"
        android:elevation="12dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_dentist_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/form_name_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/form_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dentistNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/form_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_dentist_address"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/form_case_input"
            app:layout_constraintTop_toBottomOf="@id/form_name_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_case_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/form_case">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dentistAddressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_case" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/form_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_dentist_contact"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/form_price_input"
            app:layout_constraintTop_toBottomOf="@id/form_case_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/form_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dentistContactInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_price" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_dentist_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/app_blue"
            android:text="@string/submit_transaction_form"
            app:layout_constraintTop_toBottomOf="@id/form_price_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>