<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/app_beige">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_header"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search"
                android:layout_gravity="center"
                android:padding="6dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/search_for_dentist"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="16sp"
                android:importantForAutofill="no"/>


            <ImageButton
                android:id="@+id/notification_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_notification"
                android:layout_gravity="center"
                android:contentDescription="Notification Icon"
                />
            <ImageButton
                android:id="@+id/profile_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_avatar"
                android:layout_gravity="center"
                android:contentDescription="Profile Icon"
                />




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_container"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:elevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <TextView
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/form_dentist_name"
            app:layout_constraintBottom_toTopOf="@id/form_name_input"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/form_name"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transactionClientInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/form_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/form_nature_of_case"
            app:layout_constraintBottom_toTopOf="@id/form_case_input"
            app:layout_constraintTop_toBottomOf="@id/form_name_input"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_case_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/form_case"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transactionCaseInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_case"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/form_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/form_price"
            app:layout_constraintBottom_toTopOf="@id/form_price_input"
            app:layout_constraintTop_toBottomOf="@id/form_case_input"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/form_price"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transactionPriceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_price"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_transaction_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/form_price_input"
            android:text="@string/submit_transaction_form"
            android:backgroundTint="@color/app_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/dash_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/formContainer"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

        <LinearLayout
            android:id="@+id/add_dentist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/app_tan"
                app:cardCornerRadius="15dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/add_dentist" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:text="@string/add_dentist"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dentist_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/app_tan"
                app:cardCornerRadius="15dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dentist_list" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:text="@string/dentist_lists"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/transactions_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/app_tan"
                app:cardCornerRadius="15dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/transaction" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:text="@string/transactions"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>

    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>